added configs and dependencies for production
